[tool.poetry]
name = "doc-review"
version = "0.1.0"
description = ""
authors = ["aasifshahzad <asif17186@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.16"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
